--- a/src/main/webapp/Portal.css
+++ b/src/main/webapp/Portal.css
@@ -589,10 +589,11 @@ a.shortBtn {
 	margin-right: auto;
 }
 
-.alert {
+.alert, #rootPanel .alert {
 	-moz-box-shadow:0px 1px 2px #aaa;
 	-webkit-box-shadow:0px 1px 2px #aaa;
 	box-shadow:0px 1px 2px #aaa;
+	margin: 10px 0px;
 }
 
 .heading {
