--- a/src/main/resources/org/sagebionetworks/web/client/view/CertificateViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/CertificateViewImpl.ui.xml
@@ -1,14 +1,13 @@
 <!DOCTYPE ui:UiBinder SYSTEM "http://dl.google.com/gwt/DTD/xhtml.ent">
 <ui:UiBinder xmlns:ui="urn:ui:com.google.gwt.uibinder"
 	xmlns:g="urn:import:com.google.gwt.user.client.ui"
-	xmlns:b="urn:import:org.gwtbootstrap3.client.ui">
-	
-	<ui:with field='sageImageBundle' type='org.sagebionetworks.web.client.SageImageBundle'/>
+	xmlns:b="urn:import:org.gwtbootstrap3.client.ui"
+	xmlns:w="urn:import:org.sagebionetworks.web.client.widget">
 	
 	<g:HTMLPanel>
 		<div class="clear"></div>
 		<div class="container margin-top-15">
-	        <span ui:field="loadingUI" class="center-block center"><g:Image resource='{sageImageBundle.loading31}' />&nbsp;Loading...</span>
+	        <span ui:field="loadingUI" class="center-block center"><w:LoadingSpinner size="31px"/>&nbsp;Loading...</span>
     		<g:SimplePanel ui:field="errorContainer" />
 			<g:SimplePanel ui:field="certificateContainer" />
 			<b:Panel ui:field="userNotCertifiedPanel" type="DANGER">
