--- a/src/main/resources/org/sagebionetworks/web/client/view/EmailInvitationViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/EmailInvitationViewImpl.ui.xml
@@ -3,12 +3,12 @@
 			 xmlns:g="urn:import:com.google.gwt.user.client.ui"
 			 xmlns:b="urn:import:org.gwtbootstrap3.client.ui"
 			 xmlns:bh="urn:import:org.gwtbootstrap3.client.ui.html"
+			 xmlns:w="urn:import:org.sagebionetworks.web.client.widget"
 >
 
-	<ui:with field='sageImageBundle' type='org.sagebionetworks.web.client.SageImageBundle'/>
 	<b:Container>
 		<bh:Div ui:field="loading" visible="false" addStyleNames="margin-top-100">
-			<g:Image resource='{sageImageBundle.loading31}' addStyleNames="center-block"/>
+			<w:LoadingSpinner size="31px" addStyleNames="center-block"/>
 			<b:Heading size="H4" text="Loading..." addStyleNames="text-center"/>
 		</bh:Div>
 		<b:Column size="XS_12, MD_6" offset="MD_3">
