--- a/src/main/resources/org/sagebionetworks/web/client/view/EntityViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/EntityViewImpl.ui.xml
@@ -3,13 +3,13 @@
 	xmlns:g="urn:import:com.google.gwt.user.client.ui" 
 	xmlns:c="urn:import:com.google.gwt.user.cellview.client"
 	xmlns:s="urn:import:org.sagebionetworks.web.client.view"
-	xmlns:b="urn:import:org.gwtbootstrap3.client.ui">
-    <ui:with field='sageImageBundle' type='org.sagebionetworks.web.client.SageImageBundle'/>
-
+	xmlns:b="urn:import:org.gwtbootstrap3.client.ui"
+	xmlns:w="urn:import:org.sagebionetworks.web.client.widget">
+    
 	<g:HTMLPanel>
 		<g:SimplePanel ui:field="synAlertContainer"/>
 		<g:HTMLPanel ui:field="loadingUI" addStyleNames="center-block center margin-top-100">
-			<g:Image resource='{sageImageBundle.loading31}' />
+			<w:LoadingSpinner size="31px"/>
 			&nbsp;Loading...
 		</g:HTMLPanel>
 		
