--- a/src/main/resources/org/sagebionetworks/web/client/view/LoginViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/LoginViewImpl.ui.xml
@@ -2,8 +2,9 @@
 <ui:UiBinder xmlns:ui="urn:ui:com.google.gwt.uibinder"
 	xmlns:g="urn:import:com.google.gwt.user.client.ui"
 	xmlns:b="urn:import:org.gwtbootstrap3.client.ui"
-	xmlns:bh="urn:import:org.gwtbootstrap3.client.ui.html">
-	<ui:with field='sageImageBundle' type='org.sagebionetworks.web.client.SageImageBundle'/>
+	xmlns:bh="urn:import:org.gwtbootstrap3.client.ui.html"
+	xmlns:w="urn:import:org.sagebionetworks.web.client.widget">
+	
 	<ui:style>
 		div.center {   
 			margin-left: auto;   
@@ -26,7 +27,7 @@
 				</g:HTMLPanel>
 				<b:Row ui:field="loadingUi" visible="false" addStyleNames="margin-150">
 					<b:Column size="XS_12" offset="XS_5">
-						<g:Image styleName="displayInline moveup-2" resource='{sageImageBundle.loading31}' />
+						<w:LoadingSpinner size="31px" addStyleNames="moveup-2"/>
 						<b:Heading size="H4" text="Logging you in..." addStyleNames="displayInline margin-left-5"/>
 					</b:Column>
 				</b:Row>
