--- a/src/main/resources/org/sagebionetworks/web/client/view/SignedTokenViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/SignedTokenViewImpl.ui.xml
@@ -2,15 +2,15 @@
 <ui:UiBinder xmlns:ui="urn:ui:com.google.gwt.uibinder"
 	xmlns:g="urn:import:com.google.gwt.user.client.ui" 
 	xmlns:b="urn:import:org.gwtbootstrap3.client.ui" 
-	xmlns:bh="urn:import:org.gwtbootstrap3.client.ui.html">
-
-	<ui:with field='sageImageBundle' type='org.sagebionetworks.web.client.SageImageBundle'/>
+	xmlns:bh="urn:import:org.gwtbootstrap3.client.ui.html"
+	xmlns:w="urn:import:org.sagebionetworks.web.client.widget"
+	>
 	
 	<bh:Div>
 		<bh:Div addStyleNames="color-line" />
 		<b:Container addStyleNames="min-height-200 margin-top-60">
 			<bh:Span ui:field="loadingUI" addStyleNames="center-block center">
-				<g:Image resource='{sageImageBundle.loading31}' />
+				<w:LoadingSpinner ui:field="loadMoreImage" size="31px"/>
 				<bh:Text>&nbsp;Loading...</bh:Text>
 			</bh:Span>
 			<!-- Confirm unsubscribe UI -->
