--- a/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
@@ -35,16 +35,12 @@
 				<div class="row margin-top-5">
 				    <div ui:field="profileUI" class="profileUI col-md-5 col-xs-12">
 				        <div class="padding-15 light-border">
-				        	<b:Container fluid="true">
-				        	    <b:Row ui:field="profilePictureLoadingUI" visible="false">
-						            <b:Column size="XS_12" offset="XS_5" addStyleNames="margin-top-100">
-										<w:LoadingSpinner size="31px"/>
-						            	<bh:Text>&nbsp; Loading...</bh:Text>
-									</b:Column>
-								</b:Row>
-							</b:Container>
-							<g:SimplePanel ui:field="profileSynAlertPanel"/>
-				            <g:SimplePanel ui:field="picturePanel" styleName="margin-left-10 displayInlineBlock" height="180px" width="180px"/>
+				        <bh:Div ui:field="profilePictureLoadingUI" visible="false" addStyleNames="center-spinner">
+			        			<w:LoadingSpinner size="50px"/>
+				        </bh:Div>
+						
+						<g:SimplePanel ui:field="profileSynAlertPanel"/>
+				        <g:SimplePanel ui:field="picturePanel" styleName="margin-left-10 displayInlineBlock" height="180px" width="180px"/>
 				        	
 				        	<!-- View Profile Panel -->
 				        	<bh:Div ui:field="viewProfilePanel" addStyleNames="margin-bottom-10">
