--- a/src/main/resources/org/sagebionetworks/web/client/view/LoginViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/LoginViewImpl.ui.xml
@@ -25,12 +25,10 @@
 					</div>
 					<br/>
 				</g:HTMLPanel>
-				<b:Row ui:field="loadingUi" visible="false" addStyleNames="margin-150">
-					<b:Column size="XS_12" offset="XS_5">
-						<w:LoadingSpinner size="31px" addStyleNames="displayInline moveup-2"/>
+				<bh:Div ui:field="loadingUi" visible="false" addStyleNames="margin-150 center center-block">
+					<w:LoadingSpinner size="31px" addStyleNames="moveup-2"/>
 						<b:Heading size="H4" text="Logging you in..." addStyleNames="displayInline margin-left-5"/>
-					</b:Column>
-				</b:Row>
+				</bh:Div>
 				
 				<g:HTMLPanel ui:field="termsOfServiceView" visible="false">
 					<!-- termsOfUseView -->
