--- a/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
@@ -123,6 +123,9 @@
 				    </div>
 				    <div ui:field="dashboardUI" class="dashboardUI col-md-7 col-xs-12">
 				    	<b:Button ui:field="showProfileButton" size="EXTRA_SMALL" icon="CHEVRON_RIGHT" text="Show Profile" visible="false"/>
+					<bh:Div ui:field="dashboardLoadingUI" visible="false">
+						<w:LoadingSpinner size="50px"/>
+					</bh:Div>
 				    	<div class="container-fluid">
 					    	<div class="row" ui:field="navtabContainer">
 							    <ul class="nav nav-tabs entity-tabs margin-top-15 border-none">
