--- a/src/main/webapp/Portal.css
+++ b/src/main/webapp/Portal.css
@@ -3285,6 +3285,18 @@ div.colborder {
 
 /* End Svarog css. */
 
+.dropzone {
+	box-sizing: border-box;
+	display: none;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	z-index: 99999;
+	background: rgba(#1e7098, .8);
+	border: 9px dashed #1e7098;
+}
 
 /*-------------------------------------------------------*/
 /* ### Loading spinner ### */
