change Choose File button to Drop files to upload, or Browse...

--- a/src/main/webapp/Portal.css
+++ b/src/main/webapp/Portal.css
@@ -3298,6 +3298,13 @@ div.colborder {
 	border: 5px dashed #F9F9F9;
 }
 
+.uploadContainer {
+	box-sizing: border-box;
+	padding: 10px 15px;
+	border: 1px dashed grey;
+	border-radius: 4px;
+}
+
 /*-------------------------------------------------------*/
 /* ### Loading spinner ### */
 /*-------------------------------------------------------*/
