--- a/src/main/webapp/Portal.css
+++ b/src/main/webapp/Portal.css
@@ -41,13 +41,6 @@ sticky footer
 end sticky footer
 **/
 
-
-.pagination>.active>a,.pagination>.active>span,.pagination>.active>a:hover,.pagination>.active>span:hover,.pagination>.active>a:focus,.pagination>.active>span:focus
-{
-	background-color: #1e7098;
-	border-color:#1e7098;
-}
-
 @media (min-width: 1500px) {
 	th.visible-xl, td.visible-xl {
 		display: table-cell !important;
@@ -253,9 +246,6 @@ End Synapse color scheme
 
 /* header links. transition from grey to black on hover, don't underline */
 .headerLink { line-height: 25px; font-size: 13px; font-weight: bold; padding: 0px 2px 0px 4px;
-  -o-transition:.2s;
-  -ms-transition:.2s;
-  -moz-transition:.2s;
   -webkit-transition:.2s;
   transition:.2s; }
 .headerLink:hover { color: #3a5bdc; text-decoration:none; }
@@ -279,7 +269,6 @@ End Synapse color scheme
 
 .imageButton, .gwt-Anchor, .previewDisclosureFace {
 	cursor: pointer;
-	cursor: hand;
 }
 
 /* File browser input box needs more fine-tuned selector for override*/
@@ -450,73 +439,6 @@ End Synapse color scheme
 	
 	vertical-align: middle;
 	background: white;	
-}
-
-.smallsearchbox {		
-	-webkit-appearance: none;
-	-webkit-box-shadow: rgba(0, 0, 0, 0.0745098) 0px 1px 1px 0px inset;
-	-webkit-rtl-ordering: logical;
-	-webkit-transition-delay: 0s, 0s;
-	-webkit-transition-duration: 0.2s, 0.2s;
-	-webkit-transition-property: border, box-shadow;
-	-webkit-transition-timing-function: linear, linear;
-	-webkit-user-select: text;
-	-webkit-writing-mode: horizontal-tb;
-	background-color: rgb(255, 255, 255);
-	border-bottom-color: rgb(204, 204, 204);
-	border-bottom-left-radius: 4px;
-	border-bottom-right-radius: 4px;
-	border-bottom-style: solid;
-	border-bottom-width: 1px;
-	border-image-outset: 0px;
-	border-image-repeat: stretch;
-	border-image-slice: 100%;
-	border-image-source: none;
-	border-image-width: 1;
-	border-left-color: rgb(204, 204, 204);
-	border-left-style: solid;
-	border-left-width: 1px;
-	border-right-color: rgb(204, 204, 204);
-	border-right-style: solid;
-	border-right-width: 1px;
-	border-top-color: rgb(204, 204, 204);
-	border-top-left-radius: 4px;
-	border-top-right-radius: 4px;
-	border-top-style: solid;
-	border-top-width: 1px;
-	box-shadow: rgba(0, 0, 0, 0.0745098) 0px 1px 1px 0px inset;
-	color: rgb(85, 85, 85);
-	cursor: auto;
-	display: inline-block;
-	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-size: 13px;
-	font-weight: normal;
-	height: 26px;
-	letter-spacing: normal;
-	line-height: 20px;
-	padding-bottom: 4px;
-	padding-left: 6px;
-	padding-right: 6px;
-	padding-top: 4px;
-	text-align: start;
-	text-indent: 0px;
-	text-shadow: none;
-	text-transform: none;
-	transition-delay: 0s, 0s;
-	transition-duration: 0.2s, 0.2s;
-	transition-property: border, box-shadow;
-	transition-timing-function: linear, linear;
-	vertical-align: middle;
-	width: 206px;
-	word-spacing: 0px;
-	writing-mode: lr-tb;
-}
-
-.othersearchbox {	
-	margin: 0;
-	height: 26px;
-	background-color:  #fff;
-	font-size: 1.2em;
 }
 
 div.favoriteIcon i, button.favoriteIcon>i, i.favoriteIcon, a.favoriteIcon, a.favoriteIcon:visited, a.favoriteIcon:hover, a.favoriteIcon:focus {
@@ -977,7 +899,6 @@ a.shortBtn {
 
 .userGroupSuggestBoxPopup .suggestPopupContent tr:hover {
 	cursor: pointer;
-	cursor: hand;
 }
 
 .item-selected > .userGroupSuggestion {
@@ -1091,7 +1012,7 @@ a.shortBtn {
 }
 
 .font-italic { font-style: italic; }
-.font-size-1.1em { font-size: 1.1em; }
+.font-size-1-1em { font-size: 1.1em; }
 
 .public-acl-image {
 	background-image: url(images/icons/globe-green-16.png);
@@ -1502,9 +1423,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .sidebarMenu { 
 	font-weight: bold; 	
-    -o-transition:.2s;
-    -ms-transition:.2s;
-    -moz-transition:.2s;
     -webkit-transition:.2s;
     transition:.2s;
     text-decoration:none;
@@ -1802,7 +1720,6 @@ ol.lowerroman {
 	
 	font-size: 11px;
 	opacity: 0.8;
-	filter: alpha(opacity = 80);
 	max-width: 200px;
 	color: #ffffff;
 	background-color: #000000;
@@ -2364,7 +2281,6 @@ ul, ol {
   .row-offcanvas {
     position: relative;
     -webkit-transition: all 0.25s ease-out;
-    -moz-transition: all 0.25s ease-out;
     transition: all 0.25s ease-out;
   }
 
@@ -2538,7 +2454,6 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
 }
 .datePickerDay {
   padding: 4px 7px;
-  cursor: hand;
   cursor: pointer;
 }
 .datePickerDayIsWeekend {
@@ -2576,7 +2491,6 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
   font-size: 120%;
   line-height: 1em;
   color: #3a6aad;
-  cursor: hand;
   cursor: pointer;
   font-weight: bold;
   padding: 0px 4px;
@@ -3192,7 +3106,7 @@ div.colborder {
 	-moz-box-shadow: 0px 0px 0px;
 	-webkit-box-shadow: 0px 0px 0px;
 	box-shadow: 0px 0px 0px;
-	background-color:none;
+	background-color:transparent;
 }
 .view:hover {
 	background-color:#e6e6e6;
@@ -3201,13 +3115,10 @@ div.colborder {
 	-webkit-box-shadow:0px 1px 2px #aaa;
 	box-shadow:0px 1px 2px #aaa;
 	-webkit-transition: background-color 0.4s ease-in-out;
-   -moz-transition: background-color 0.4s ease-in-out;
-   -o-transition: background-color 0.4s ease-in-out;
-   -ms-transition: background-color 0.4s ease-in-out;
-   transition: background-color 0.4s ease-in-out;
+    transition: background-color 0.4s ease-in-out;
 }
 
-.view:hover .item a { background-color:none !important;}
+.view:hover .item a { background-color:transparent !important;}
 .view h5 .link {
 	padding-left:23px;
 	margin-bottom:50px;
@@ -3256,14 +3167,6 @@ div.colborder {
 
 ::-webkit-scrollbar {
     -webkit-appearance: none;
-}
-
-::-webkit-scrollbar:vertical {
-    width: 11px;
-}
-
-.frame::-webkit-scrollbar:horizontal {
-    height: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
