--- a/src/main/resources/org/sagebionetworks/web/client/view/ChangeUsernameViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ChangeUsernameViewImpl.ui.xml
@@ -11,7 +11,7 @@
 				<div class="well col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
 					<h2>Set Username </h2>
 					<div class="signin-panel panel panel-body margin-top-15">
-		   				<h4 class="form-signin-heading">Synapse now requires a username. Please take a moment to carefully choose yours.</h4>
+		   				<h4>Synapse now requires a username. Please take a moment to carefully choose yours.</h4>
 						<g:TextBox ui:field="username" addStyleNames="form-control"/>
 						<b:Row>
 						    <b:Column size="XS_9">
