--- a/src/main/resources/org/sagebionetworks/web/client/view/MapViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/MapViewImpl.ui.xml
@@ -8,7 +8,7 @@
 
 	<g:HTMLPanel>
 	    <div class="color-line"></div>
-		<div class="separator separator-header-page"></div>
+		<div class="separator margin-top-3"></div>
 	    <div class="margin-top-left-10 margin-right-15">
 	    	<bh:Div ui:field="allUsersTitle">
 	    		<b:Heading text="All Synapse Users" size="H4" />
