--- a/src/main/resources/org/sagebionetworks/web/client/view/CertificateViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/CertificateViewImpl.ui.xml
@@ -7,7 +7,7 @@
 	<g:HTMLPanel>
 		<div class="clear"></div>
 		<div class="container margin-top-15">
-	        <span ui:field="loadingUI" class="center-block center"><w:LoadingSpinner size="31px"/>&nbsp;Loading...</span>
+	        <w:LoadingSpinner ui:field="loadingUI" size="31px"/>
     		<g:SimplePanel ui:field="errorContainer" />
 			<g:SimplePanel ui:field="certificateContainer" />
 			<b:Panel ui:field="userNotCertifiedPanel" type="DANGER">
