--- a/src/main/resources/org/sagebionetworks/web/client/view/EmailInvitationViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/EmailInvitationViewImpl.ui.xml
@@ -7,10 +7,7 @@
 >
 
 	<b:Container>
-		<bh:Div ui:field="loading" visible="false" addStyleNames="margin-top-100">
-			<w:LoadingSpinner size="31px" addStyleNames="center-block"/>
-			<b:Heading size="H4" text="Loading..." addStyleNames="text-center"/>
-		</bh:Div>
+		<w:LoadingSpinner ui:field="loading" size="31px" addStyleNames="center-block margin-top-100"/>
 		<b:Column size="XS_12, MD_6" offset="MD_3">
 			<g:SimplePanel ui:field="synapseAlertContainer"/>
 			<bh:Div ui:field="notLoggedInContainer" visible="false">
