--- a/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
@@ -35,10 +35,8 @@
 				<div class="row margin-top-5">
 				    <div ui:field="profileUI" class="profileUI col-md-5 col-xs-12">
 				        <div class="padding-15 light-border">
-				        <bh:Div ui:field="profilePictureLoadingUI" visible="false">
-			        			<w:LoadingSpinner size="50px"/>
-				        </bh:Div>
-						
+						<w:LoadingSpinner ui:field="profilePictureLoadingUI" visible="false" size="50px"/>
+				        
 						<g:SimplePanel ui:field="profileSynAlertPanel"/>
 				        <g:SimplePanel ui:field="picturePanel" styleName="margin-left-10 displayInlineBlock" height="180px" width="180px"/>
 				        	
@@ -123,10 +121,8 @@
 				    </div>
 				    <div ui:field="dashboardUI" class="dashboardUI col-md-7 col-xs-12">
 				    	<b:Button ui:field="showProfileButton" size="EXTRA_SMALL" icon="CHEVRON_RIGHT" text="Show Profile" visible="false"/>
-					<bh:Div ui:field="dashboardLoadingUI" visible="false">
-						<w:LoadingSpinner size="50px"/>
-					</bh:Div>
-				    	<div class="container-fluid">
+					<w:LoadingSpinner ui:field="dashboardLoadingUI" visible="false" size="50px"/>
+					<div class="container-fluid">
 					    	<div class="row" ui:field="navtabContainer">
 							    <ul class="nav nav-tabs entity-tabs margin-top-15 border-none">
 								    <li class="entity-tab active margin-left-15" ui:field="projectsListItem">
@@ -224,9 +220,7 @@
 							    		<b:Heading ui:field="challengesHeading" size="H3"></b:Heading>
 							    		<g:FlowPanel ui:field="challengesTabContent" styleName="margin-10" />
 							    	</div>
-							    		<div ui:field="challengesLoadingUI">
-										<w:LoadingSpinner size="31px"/>
-									</div>
+							    		<w:LoadingSpinner ui:field="challengesLoadingUI" size="31px"/>
 									<div class="clearfix">
 									    <b:Button ui:field="moreChallengesButton" styleName="btn btn-default btn-sm col-xs-12 margin-top-10">Show more results...</b:Button>
 									</div>
