rewrite userbadge view, use flex display css instead of table.  if showing company, then create and add the element as needed

--- a/src/main/webapp/Portal1.css
+++ b/src/main/webapp/Portal1.css
@@ -1341,6 +1341,30 @@ ol.lowerroman {
 	display: block;
 }
 
+.flexcontainer-row {
+   display: -webkit-flex;
+   display: flex;
+   -webkit-flex-direction: row;
+   flex-direction: row;
+}
+
+.flexcontainer-column {
+   display: -webkit-flex;
+   display: flex;
+   -webkit-flex-direction: column;
+   flex-direction: column;
+}
+
+.flexcontainer-align-center {
+	-webkit-align-items: center;
+   align-items: center;
+}
+
+.flexcontainer-justify-center {
+   -webkit-justify-content: center;
+   justify-content: center;
+}
+
 .smallerText {
 	font-size: 0.8em;
 }
