--- a/src/main/resources/org/sagebionetworks/web/client/view/EntityViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/EntityViewImpl.ui.xml
@@ -8,7 +8,7 @@
     
 	<g:HTMLPanel>
 		<g:SimplePanel ui:field="synAlertContainer"/>
-		<w:LoadingSpinner ui:field="loadingUI" addStyleNames="margin-top-100" size="40px"/>
+		<w:LoadingSpinner ui:field="loadingUI" addStyleNames="margin-top-100 center-block center" size="40px"/>
 		
 		<g:SimplePanel ui:field="entityPageTopPanel"/>
 		<b:Heading ui:field="accessDependentMessage"  size="H4" text="Access could be dependent upon membership in one of the following Teams"
