--- a/src/main/resources/org/sagebionetworks/web/client/view/LoginViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/LoginViewImpl.ui.xml
@@ -27,7 +27,7 @@
 				</g:HTMLPanel>
 				
 				<w:LoadingSpinner ui:field="loadingUi" visible="false" size="31px" addStyleNames="moveup-2 margin-150 center center-block"/>
-				<b:Heading ui:field="loadingUiText" size="H4" text="Logging you in..." addStyleNames="displayInline margin-left-5"/>
+				<b:Heading ui:field="loadingUiText" size="H4" text="Logging you in..." addStyleNames="displayInline center center-block margin-left-5"/>
 				
 				<g:HTMLPanel ui:field="termsOfServiceView" visible="false">
 					<!-- termsOfUseView -->
