--- a/src/main/resources/org/sagebionetworks/web/client/view/ComingSoonViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ComingSoonViewImpl.ui.xml
@@ -20,9 +20,10 @@
 			<w:HelpWidget text="Optional help link text" helpMarkdown="This contains basic help." href="http://link/to/more/help" placement="BOTTOM" />
 			<w:HelpWidget helpMarkdown="This contains **very basic** markdown, perhaps with a [link](http://www.jayhodgson.com)."/>
 		</g:FlowPanel>
-		
+		<bh:Div ui:field="reactWidget" />
 		<bh:Div ui:field="widgetContainer" />
 		<bh:Div ui:field="chart" width="100%" height="400px" />
+		
 		<h2>Coming Soon</h2>
 		
 		This page is coming soon.
