--- a/src/main/webapp/Portal.css
+++ b/src/main/webapp/Portal.css
@@ -224,13 +224,14 @@ End Synapse color scheme
 .border-none, input[type=text][readonly].border-none, #body .border-none {
 	border: none;
 }
-.userProfileImage {
+
+.userProfileImage, #rootPanel .userProfileImage {
 	border-radius: 3px;
+	max-width: none;
 }
 
 /* Search loading image */
 .ui-autocomplete-loading { background: white url('http://jqueryui.com/demos/autocomplete/images/ui-anim_basic_16x16.gif') right center no-repeat; }
-
 
 .ui-menu .ui-menu-item a {
     display: block;
