--- a/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
@@ -126,35 +126,40 @@
 					    	<div class="row" ui:field="navtabContainer">
 							    <ul class="nav nav-tabs entity-tabs margin-top-15 border-none">
 								    <li class="entity-tab active margin-left-15" ui:field="projectsListItem">
-								    	<a class="text-align-center link no-background">
-									    	<g:FocusPanel ui:field="projectsLink" addStyleNames="displayInline">
-									    		<bh:Text>Projects</bh:Text>
+								    		<a class="text-align-center link no-background">
+									    		<g:FocusPanel ui:field="projectsLink" addStyleNames="displayInline" tabIndex="-1">
+									    			<b:Anchor addStyleNames="textDecorationNone">Projects</b:Anchor>
 										    </g:FocusPanel>
 										    <w:HelpWidget helpMarkdown="This tab shows you the Projects you have created, those that have been shared with you and your favorites.&#10;Start creating a project by giving it a name." 
 										    	href="http://docs.synapse.org/articles/making_a_project.html" placement="BOTTOM"/>
 										</a>
 								    </li>
 								    <li class="entity-tab" ui:field="challengesListItem">
-								    	<a class="text-align-center link no-background">
-									    	<g:FocusPanel ui:field="challengesLink" addStyleNames="displayInline">
-									    		<bh:Text>Challenges</bh:Text>
+								    		<a class="text-align-center link no-background">
+									    		<g:FocusPanel ui:field="challengesLink" addStyleNames="displayInline" tabIndex="-1">
+									    			<b:Anchor addStyleNames="textDecorationNone">Challenges</b:Anchor>
 										    </g:FocusPanel>
 										    <w:HelpWidget helpMarkdown="This tab shows you challenges you have registered for.&#10;Challenges are computational contests organized through the Dream Challenges." 
 										    	href="http://dreamchallenges.org" placement="BOTTOM"/>
 										</a>
 								    </li>
 								    <li class="entity-tab" ui:field="teamsListItem">
-								    	<a class="text-align-center link no-background">
-									    	<g:FocusPanel ui:field="teamsLink" addStyleNames="displayInline">
-									    		<bh:Text>Teams</bh:Text>
+								    		<a class="text-align-center link no-background">
+									    		<g:FocusPanel ui:field="teamsLink" addStyleNames="displayInline" tabIndex="-1">
+									    			<b:Anchor addStyleNames="textDecorationNone">Teams</b:Anchor>
 										    </g:FocusPanel>
 										    <bh:Span ui:field="teamNotifications" />
 										    <w:HelpWidget helpMarkdown="This tab lists Teams you have created and have been invited to join.&#10;Create a Team by providing a name and clicking “Create Team”." 
 												href="http://docs.synapse.org/articles/teams.html" placement="BOTTOM" />
 										</a>
 								    </li>
-								    
-								    <li class="entity-tab" ui:field="settingsListItem"><g:Anchor styleName="text-align-center link no-background" text="Settings" ui:field="settingsLink"/></li>
+								    <li class="entity-tab" ui:field="settingsListItem">
+								    		<a class="text-align-center link no-background">
+									    		<g:FocusPanel ui:field="settingsLink" addStyleNames="displayInline" tabIndex="-1">
+									    			<b:Anchor addStyleNames="textDecorationNone">Settings</b:Anchor>
+										    </g:FocusPanel>
+										</a>
+								    	</li>
 							    </ul>
 							</div>
 						</div>
