--- a/src/main/resources/org/sagebionetworks/web/client/view/SignedTokenViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/SignedTokenViewImpl.ui.xml
@@ -32,7 +32,7 @@
 				<b:ModalFooter>
 					<b:Button ui:field="confirmUnsubscribe" type="PRIMARY"
 						dataLoadingText="Saving...">Unsubscribe</b:Button>
-					<b:Button ui:field="cancelUnsubscribe" type="DEFAULT"
+					<b:Button ui:field="cancelUnsubscribe" type="LINK"
 						dataDismiss="MODAL">Cancel</b:Button>
 				</b:ModalFooter>
 			</b:Modal>
