--- a/src/main/resources/org/sagebionetworks/web/client/widget/table/modal/wizard/ModalWizardViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/widget/table/modal/wizard/ModalWizardViewImpl.ui.xml
@@ -22,7 +22,7 @@
 			<b:Alert ui:field="alert" type="DANGER" visible="false"></b:Alert>
 		</b:ModalBody>
 		<b:ModalFooter>
-			<b:Button ui:field="defaultButton" type="DEFAULT" text="Cancel"	></b:Button>
+			<b:Button ui:field="defaultButton" type="LINK" text="Cancel"	></b:Button>
 			<b:Button ui:field="primaryButton" type="PRIMARY" dataLoadingText="Processing..." text="Next" ></b:Button>
 		</b:ModalFooter>
 	</b:Modal>
