--- a/src/main/webapp/Portal.css
+++ b/src/main/webapp/Portal.css
@@ -862,11 +862,12 @@ span.font-size-58,
 .font-size-18 {
 	font-size: 18px;
 }
-
 .font-size-17 {
 	font-size: 17px;
 }
-
+.font-size-16 {
+	font-size: 16px;
+}
 .font-size-15 {
 	font-size: 15px;
 }
