fix color, and scroll to top before showing suggestion popover (or the position will be wrong)

--- a/src/main/webapp/Portal.css
+++ b/src/main/webapp/Portal.css
@@ -1421,7 +1421,7 @@ ol.lowerroman {
 	padding: 4px;
 	border: 1px solid #ccc;
 	border-top: 0px;
-	background-color: #000000;
+	background-color: #fff;
 }
 
 .gwt-PopupPanel {
