initial cleanup (use synapse alert for error handling, use mockito annotations, remove dead code)

--- a/src/main/resources/org/sagebionetworks/web/client/view/LoginViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/LoginViewImpl.ui.xml
@@ -15,7 +15,8 @@
 	</ui:style>
 	<g:HTMLPanel>
         <div class="clear"></div>
-		    	<div class="container margin-top-15"> 		
+		    	<div class="container margin-top-15">
+		    		<bh:Div ui:field="synAlertContainer"/>
 				<g:HTMLPanel ui:field="loginView" visible="true">
 					<!-- LoginView -->				
 					<div class="panel padding-10 col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
