--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -685,9 +685,8 @@ div.favoriteIcon i, button.favoriteIcon>i, i.favoriteIcon, a.favoriteIcon, a.fav
 }
 
 .userGroupSuggestBoxPopup {
-	z-index: 2000;
 	background-color: #fff;
-	border-radius: 0px 0px 5px 5px;
+	border-radius: 5px;
 }
 
 .userGroupSuggestBoxPopup .suggestPopupContent tr:nth-child(2n) {
@@ -1420,7 +1419,6 @@ ol.lowerroman {
 	cursor: pointer; 
 	padding: 4px;
 	border: 1px solid #ccc;
-	border-top: 0px;
 	background-color: #fff;
 }
 
