SWC-4187: add 10-15px padding below markdown paragraphs

--- a/src/main/webapp/sass/Portal.scss
+++ b/src/main/webapp/sass/Portal.scss
@@ -785,7 +785,8 @@ div.favoriteIcon i, button.favoriteIcon>i, i.favoriteIcon, a.favoriteIcon, a.fav
 	}
 
 	p {
-		margin: 0px;	
+		margin: 0px;
+		padding-bottom: 12px;
 	}
 	h1 {
 		padding: 35px 0 12px 0;
