--- a/src/main/resources/org/sagebionetworks/web/client/view/TeamViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/TeamViewImpl.ui.xml
@@ -45,7 +45,7 @@
 		    	    <bh:Span ui:field="publicJoinField" visible="false" addStyleNames="boldText margin-right-5" text="Can be joined without team manager authorization " />
 		    	    <g:TextBox ui:field="synapseEmailField" width="100%" addStyleNames="border-none noBackground margin-right-15" readOnly="true" />
 		    	    <b:Anchor ui:field="showMapLink" text="Show map" icon="MAP_MARKER" visible="false"/>
-		    	    <b:Modal ui:field="mapModal" closable="true" dataBackdrop="STATIC" dataKeyboard="false" addStyleNames="modal-fullscreen" >
+		    	    <b:Modal ui:field="mapModal" closable="true" dataBackdrop="STATIC" dataKeyboard="true" addStyleNames="modal-fullscreen" >
 						<b:ModalBody>
 							<bh:Div ui:field="mapPanel"/>
 						</b:ModalBody>
